--- a/modules-available/locationinfo/frontend/panel.html
+++ b/modules-available/locationinfo/frontend/panel.html
@@ -89,6 +89,8 @@
 		var roomidsString = "";
 		var lastPcUpdate;
 		var lastTimeTableUpdate;
+
+		// Todo change these
 		var pcStateUpdateTime = 60; // in seconds
 		var TimeTableUpdateTime = 60*30; //in seconds
 
